# memescrapes

./: README.md  pyproject.toml
memescrapes/: __init__.py  search.py
tests/: test_memescrapes.py
